updated gifs, fix fonts (maybe), misc
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/css/theme/source/redhat.scss
+++ b/presentations/KVM-Forum-2014/css/theme/source/redhat.scss
@@ -12,7 +12,7 @@
 // ---------------------------------------------
 
 // Include theme-specific fonts
-@import "../../../../fonts/overpass.css";
+@import "../../../fonts/overpass.css";
 
 // Override theme settings (see ../template/settings.scss)
 $mainFont: 'Overpass', sans-serif;
