--- a/presentations/fonts/overpass.css
+++ b/presentations/fonts/overpass.css
@@ -1,21 +1,21 @@
 @font-face {
     font-family: Overpass;
-    src: url("./fonts/overpass_regular-web.eot");
-    src: url("./fonts/overpass_regular-web.eot?#iefix") format("eot"),
-         url("./fonts/overpass_regular-web.woff") format("woff"),
-         url("./fonts/overpass_regular-web.ttf") format("truetype"),
-         url("./fonts/overpass_regular-web.svg#webfontLTZe4IYH") format("svg");
+    src: url("./overpass_regular-web.eot");
+    src: url("./overpass_regular-web.eot?#iefix") format("eot"),
+         url("./overpass_regular-web.woff") format("woff"),
+         url("./overpass_regular-web.ttf") format("truetype"),
+         url("./overpass_regular-web.svg#webfontLTZe4IYH") format("svg");
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: Overpass;
-    src: url("./fonts/overpass_bold-web.eot");
-    src: url("./fonts/overpass_bold-web.eot?#iefix") format("eot"),
-         url("./fonts/overpass_bold-web.woff") format("woff"),
-         url("./fonts/overpass_bold-web.ttf") format("truetype"),
-         url("./fonts/overpass_bold-web.svg#webfontzAU82Ltw") format("svg");
+    src: url("./overpass_bold-web.eot");
+    src: url("./overpass_bold-web.eot?#iefix") format("eot"),
+         url("./overpass_bold-web.woff") format("woff"),
+         url("./overpass_bold-web.ttf") format("truetype"),
+         url("./overpass_bold-web.svg#webfontzAU82Ltw") format("svg");
     font-weight: 800;
     font-style: normal;
 }
